monitoring/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
spec:
  rules:
    - host: grafana.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: loki-grafana
              servicePort: 80
    - host: jaeger.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: jaeger-query
              servicePort: 80
